[package]
name = "blockchain-info-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2.22", features = ["full"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"